src/objects/Metadata_Case_Assignment_Rule__c.object
<CustomObject>
    <description>This is a new version metadata table for sites page for case queue assignments.</description>
    <fields>
        <fullName>Account_Record_Type_Name__c</fullName>
        <label>Account Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Record_Type_Name__c</fullName>
        <label>Activity Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <inlineHelpText>Leave field empty to work with ALL brands</inlineHelpText>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>353</fullName>
                </value>
                <value>
                    <fullName>365</fullName>
                </value>
                <value>
                    <fullName>7 OClock</fullName>
                </value>
                <value>
                    <fullName>7th Stage</fullName>
                </value>
                <value>
                    <fullName>Ace</fullName>
                </value>
                <value>
                    <fullName>Agilite3</fullName>
                </value>
                <value>
                    <fullName>Agility</fullName>
                </value>
                <value>
                    <fullName>Ajax</fullName>
                </value>
                <value>
                    <fullName>Align</fullName>
                </value>
                <value>
                    <fullName>Alldays</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Always Discreet</fullName>
                </value>
                <value>
                    <fullName>Ambi Pur</fullName>
                </value>
                <value>
                    <fullName>Anna Sui</fullName>
                </value>
                <value>
                    <fullName>Antikal</fullName>
                </value>
                <value>
                    <fullName>Ariel</fullName>
                </value>
                <value>
                    <fullName>Atra</fullName>
                </value>
                <value>
                    <fullName>Aussie</fullName>
                </value>
                <value>
                    <fullName>Avril Lavigne</fullName>
                </value>
                <value>
                    <fullName>Baldessarini</fullName>
                </value>
                <value>
                    <fullName>Basic White</fullName>
                </value>
                <value>
                    <fullName>Beautiful Collection</fullName>
                </value>
                <value>
                    <fullName>Bellady</fullName>
                </value>
                <value>
                    <fullName>Blend-A-Dent</fullName>
                </value>
                <value>
                    <fullName>Blend-A-Med</fullName>
                </value>
                <value>
                    <fullName>Blend-A-Med Oral-B</fullName>
                </value>
                <value>
                    <fullName>Blendax</fullName>
                </value>
                <value>
                    <fullName>Blue 3</fullName>
                </value>
                <value>
                    <fullName>Blue II</fullName>
                </value>
                <value>
                    <fullName>Bogner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <inlineHelpText>Leave field empty to work with ALL Case Origins</inlineHelpText>
        <label>Case Origin</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Name__c</fullName>
        <label>Case Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed and Locked</fullName>
                </value>
                <value>
                    <fullName>Reopened by Consumer</fullName>
                </value>
                <value>
                    <fullName>Reopened by CCM</fullName>
                </value>
                <value>
                    <fullName>Reopened by CCM - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Reopened by Social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>If you have this field populated, then no other fields should be populated. The rule looks at email OR country/language/priority/reason for writing/brand/case status.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Kazakh</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Maltese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <inlineHelpText>Queue name. Not label. The one that has underscores.</inlineHelpText>
        <label>Queue Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Used to determine rule priority over other rule if multiple rules found for the same condition.</inlineHelpText>
        <label>Rank</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Writing__c</fullName>
        <inlineHelpText>0 - Any case created outside of ContactUs form (CCM and Agent Console)
1 - Send a testimonial
2 - Ask a question
3 - Product availability / Where to buy
4 - Report a problem
5 - Coupons, Samples, Sponsorship
6 - Promotions</inlineHelpText>
        <label>Reason for Writing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metadata Case Assignment Rule</label>
    <listViews>
        <fullName>AA_countries</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Country__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>AA</value>
        </filters>
        <label>AA countries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Africa</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>South Africa</value>
        </filters>
        <label>Africa</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Case_Origin__c</columns>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Reason_for_Writing__c</columns>
        <columns>Rank__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Case_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Australia</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Australia</value>
        </filters>
        <label>Australia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BR_Queues</fullName>
        <columns>Brand__c</columns>
        <columns>NAME</columns>
        <columns>Queue_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>BR</value>
        </filters>
        <label>BR Queues</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brand_Specific_edit_view</fullName>
        <columns>NAME</columns>
        <columns>Rank__c</columns>
        <columns>Brand__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Dutch,Flemish</value>
        </filters>
        <label>Brand Specific *edit view*</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Brazil</value>
        </filters>
        <label>Brazil</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_HK_TW</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>China,Hong Kong,Taiwan</value>
        </filters>
        <label>China HK TW</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Croatia</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Croatia</value>
        </filters>
        <label>Croatia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Czech</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Czech Republic</value>
        </filters>
        <label>EU Czech</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Egypt</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Egypt</value>
        </filters>
        <label>Egypt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Email_Only</fullName>
        <columns>NAME</columns>
        <columns>Queue_Name__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Email Only</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Email_specific</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Email specific</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>France</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>France</value>
        </filters>
        <label>France</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GDM</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Country__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>contains</operation>
            <value>gdm</value>
        </filters>
        <label>GDM</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MCAR-{00000}</displayFormat>
        <label>Metadata Case Assignment Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Case Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>